Add Travis CI build script